--- a/css/global.css
+++ b/css/global.css
@@ -1,15 +1,16 @@
-*{
+@import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap");
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-:root{
-    font-family: 'Oxygen', sans-serif;
+:root {
+    font-family: "Oxygen", sans-serif;
     --primary: #bb86fc;
-    --secondary: #3700B3;
+    --secondary: #3700b3;
 }
-
-.container{
-    padding: 20px;
+.container {
+    padding-inline: 75px;
+    padding-block: 20px;
 }
