--- a/css/products.css
+++ b/css/products.css
@@ -77,6 +77,7 @@
 
 .products-with-category-filter-container {
     display: flex;
+    position: relative;
     gap: 20px;
 }
 
@@ -84,19 +85,22 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
-    width: 50%;
+    width: fit-content;
+    height: fit-content;
+    position: sticky;
+    top: 15px;
     background-color: #eee;
     border-radius: 10px;
     border: 2px solid grey;
-    gap: 10px;
 }
 .category-filter-header {
     border-left: 3px solid black;
-    padding: 5px;
+    padding-left: 5px;
     margin-bottom: 20px;
+    font-size: 20px;
 }
 .category-filter {
-    font-size: 24px;
+    font-size: 18px;
     font-weight: 100;
     border-radius: 5px;
     padding: 10px;
