Refactor navigation icons to use anchor tags for Wishlist, Cart, and Profile in favorite.html, index.html, and products.html. Add renderFavoriteProducts function to display favorites from localStorage. Implement cart and checkout rendering in separate JS files. Update global.js for improved product rendering and toast notifications.

--- a/css/cart.css
+++ b/css/cart.css
@@ -112,6 +112,11 @@ td{
     font-weight: bold;
 }
 
+.checkout-btn:hover{
+    background-color: goldenrod;
+    transition: 0.4s ease;
+}
+
 .checkout-btn a{
     color: white;
     text-decoration: none;
