--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,11 +1,15 @@
 @import url(global.css);
 nav{
     display: flex;
+    position: sticky;
+    top: 0;
+    z-index: 1;
     justify-content: space-between;
     align-items: center;
     background-color: #111111;
     color: white;
 }
+
 
 
 .main-logo{
